fixed and changed design of dark mode buttons and refactored

--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,7 @@ button:hover {
   border-left: 4px solid #272363;
   border-radius: 50%;
   text-shadow: 1px 1px #38ace1;
+  z-index: 1;
 }
 /* #38ace1 */
 /* <------------------ End of CSS for Buttons in Light Mode ------------------> */
@@ -196,7 +197,6 @@ button:hover {
   opacity: 1;
 }
 
-
 .dark .toggleDarkModeButton {
   width: 40px;
   padding: 0;
@@ -207,31 +207,23 @@ button:hover {
   background-size: cover;
 }
 
-.dark button {
-  background-color: transparent;
-  margin: 27px;
-  padding: 50px;
-  font-size: 40px;
-  color: white;
-  font-weight: bold;
-  text-shadow: 1px 1px black !important;
-  cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'My Soul', cursive;
-}
-
-.dark button:hover {
-  background-color: #8b87e4; 
-  box-shadow: 5px 7px black;
-  border-radius: 40%; 
-  color: white;
-  font-size: 50px;
-  text-shadow: 1px 1px black;
-}
 .dark .toggleDarkModeButton:hover {
   border: none;
   opacity: 1;
 
+}
+
+.dark button {
+  color: white;
+  text-shadow: 1px 1px black;
+}
+.dark button:hover {
+  border-left: 4px solid #38ace1;
+  border-radius: 50%;
+  text-shadow: 2px 1px #38ace1;;
+
+  /* #38ace1 light*/
+  /* #272363 dark */
 }
 
 /* <------------------ End of CSS for Buttons in Dark Mode ------------------> */
@@ -275,7 +267,6 @@ button.sagittarius{
 }
 button.sagittarius:hover {
   margin-top: -6px;
-  z-index: 1;
 }
 
 
@@ -284,7 +275,6 @@ button.capricorn{
 }
 button.capricorn:hover {
   margin-top: -6px;
-  z-index: 1; 
 }
 
 button.aquarius{
@@ -292,7 +282,6 @@ button.aquarius{
 }
 button.aquarius:hover {
   margin-top: -6px;
-  z-index: 1; 
 }
 
 button.pisces{
@@ -317,6 +306,7 @@ button.pisces:hover {
 }
 
 .timeframes-container > button:hover {
+  border: none;
   margin-top: 0;
   padding-top: 0;
   z-index: 1;
